# ai-project-other

./: README.md  SENTIENT_MODE_INSTRUCTIONS.md  freysa0.py  main.py  pyproject.toml  quantum_strat_v3.lisp  requirements.txt
agents/: __init__.py  freysa.yaml  freysa_.py  freysa_agent.py
src/: freysa_agent.py
tests/: test_agent.py  test_freysa0.py  test_freysa_agent.py
